feat: improve user registration validation and add email uniqueness check
feat: enhance ShopController to handle legacy skin data and ensure default skins

fix: add bounds checking in Board class for shot coordinates

feat: extend UserRepository with email lookup functionality

feat: configure CORS settings to allow dynamic origins from properties

feat: implement transactional behavior in GameService for critical operations

feat: add game abandonment logic in GameService to handle player exits

feat: enhance ProfileModal and ShopModal with focus trap for accessibility

fix: update Lobby and PlaceShips pages to handle unauthorized profile fetch

feat: improve API error handling in registration and profile fetching

chore: create application-dev.properties for local development setup